--- a/res/xml/hardware_info.xml
+++ b/res/xml/hardware_info.xml
@@ -20,11 +20,19 @@
     xmlns:settings="http://schemas.android.com/apk/res-auto"
     android:title="@string/model_name"
     settings:keywords="@string/keywords_model_and_hardware">
-
+        
     <PreferenceCategory
         android:key="model_info_category"
         android:selectable="false"
         android:title="@string/mod_info">
+
+    <!-- Device manufacturer -->
+    <Preference
+        android:key="hardware_info_device_manufacturer"
+        android:title="@string/device_manufacturer"
+        android:summary="@string/summary_placeholder"
+        settings:controller="com.android.settings.deviceinfo.hardwareinfo.DeviceManufacturerPreferenceController"
+        settings:enableCopying="true"/>
 
     <!-- Model -->
     <Preference
