Add information about OpenGL driver version
In order to get Mesa / OpenGL ES info, an EGL context is required.
Without it, GLES20.glGetString returns NULL.

Change-Id: I3d95f9c1ee7d2df707ac2ccfcad5b0b5821f8fda

--- a/res/xml/firmware_version.xml
+++ b/res/xml/firmware_version.xml
@@ -80,6 +80,14 @@
         settings:enableCopying="true"
         android:selectable="false"
         settings:controller="com.android.settings.deviceinfo.firmwareversion.SelinuxStatusPreferenceController"/>
+        
+    <!-- OpenGL driver -->
+    <Preference
+        android:key="opengl_version"
+        android:title="@string/opengl_version"
+        android:summary="@string/summary_placeholder"
+        settings:enableCopying="true"
+        settings:controller="com.android.settings.deviceinfo.firmwareversion.OpenGLVersionPreferenceController"/>
 
     <!-- Build -->
     <Preference
