--- a/res/drawable/ic_dashboard_blissify.xml
+++ b/res/drawable/ic_dashboard_blissify.xml
@@ -1,12 +1,18 @@
-<vector android:height="24dp" android:viewportHeight="512"
-    android:viewportWidth="512" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M0.882,255.233C13.111,237.552 83.286,147.431 149.977,255.233L149.096,255.233C82.404,363.034 12.23,272.913 0,255.233L0.882,255.233Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M74.671,73.911C95.949,69.969 209.95,55.359 180.097,178.265L179.474,177.648C55.305,207.197 70.065,94.355 74.047,73.294L74.671,73.911Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M255.225,0.873C273.087,12.978 364.135,82.438 255.225,148.452L255.225,147.579C146.315,81.566 237.363,12.106 255.225,-0L255.225,0.873Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M511.118,255.233C498.889,237.552 428.714,147.431 362.023,255.233L362.904,255.233C429.596,363.034 499.77,272.913 512,255.233L511.118,255.233Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M437.33,73.911C416.051,69.969 302.05,55.359 331.903,178.265L332.526,177.648C456.695,207.197 441.935,94.355 437.953,73.294L437.33,73.911Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M77.302,438.089C98.58,442.031 212.581,456.641 182.728,333.735L182.105,334.352C57.936,304.803 72.696,417.645 76.678,438.706L77.302,438.089Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M257.856,511.128C275.718,499.022 366.766,429.562 257.856,363.549L257.856,364.421C148.946,430.434 239.994,499.895 257.856,512L257.856,511.128Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M439.961,438.089C418.683,442.031 304.681,456.641 334.534,333.735L335.157,334.352C459.326,304.803 444.566,417.645 440.584,438.706L439.961,438.089Z"/>
-    <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M255.616,183.917L274.511,209.084L305.85,204.513L301.232,235.533L326.658,254.236L301.232,272.938L305.85,303.959L274.511,299.387L255.616,324.555L236.721,299.387L205.382,303.959L210,272.938L184.574,254.236L210,235.533L205.382,204.513L236.721,209.084L255.616,183.917Z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="512dp"
+    android:height="512dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <group>
+        <path android:fillColor="?android:attr/colorPrimary" android:pathData="M264.58 460.8c69.55-8.4 135.02-40.98 182.37-96.9 47.35-55.93 68.35-125.48 64.62-194.82-69.55 8.4-135.01 40.97-182.37 96.9-47.34 55.93-68.35 125.48-64.62 194.82Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:pathData="M264.58 460.8c69.55-8.4 135.02-40.98 182.37-96.9 47.35-55.93 68.35-125.48 64.62-194.82-69.55 8.4-135.01 40.97-182.37 96.9-47.34 55.93-68.35 125.48-64.62 194.82Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:pathData="M247.41 460.8c3.73-69.34-17.28-138.9-64.63-194.82-47.34-55.93-112.8-88.5-182.36-96.9-3.73 69.34 17.28 138.89 64.63 194.81 47.34 55.93 112.8 88.5 182.36 96.91Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:pathData="M247.41 460.8c3.73-69.34-17.28-138.9-64.63-194.82-47.34-55.93-112.8-88.5-182.36-96.9-3.73 69.34 17.28 138.89 64.63 194.81 47.34 55.93 112.8 88.5 182.36 96.91Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M305.55 148.13c-12.68-26.1-29.4-50.1-49.4-71.33-20.06 21.28-36.81 45.37-49.5 71.54 19.5 20.15 36.22 43.22 49.34 68.89 13.18-25.77 29.96-48.9 49.56-69.1Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M305.55 148.13c-12.68-26.1-29.4-50.1-49.4-71.33-20.06 21.28-36.81 45.37-49.5 71.54 19.5 20.15 36.22 43.22 49.34 68.89 13.18-25.77 29.96-48.9 49.56-69.1Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M98.09 184.45c2.9-28.89 10.32-57.19 21.82-83.98 55.81 28.12 101.9 73.28 129.05 131.52-2.45 5.54-4.73 11.19-6.85 16.94-7.26 19.77-12.18 39.85-14.9 59.98-9.5-17.94-21.03-35.1-34.65-51.2-26.77-31.6-59.03-56.07-94.47-73.26Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M98.09 184.45c2.9-28.89 10.32-57.19 21.82-83.98 55.81 28.12 101.9 73.28 129.05 131.52-2.45 5.54-4.73 11.19-6.85 16.94-7.26 19.77-12.18 39.85-14.9 59.98-9.5-17.94-21.03-35.1-34.65-51.2-26.77-31.6-59.03-56.07-94.47-73.26Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M413.9 184.45c-2.9-28.89-10.33-57.19-21.83-83.98-62.45 31.47-112.73 84.27-137.92 152.88-9.45 25.72-14.75 51.98-16.25 78.13 8.34 19.79 14.35 40.32 18.1 61.21 8.68-48.51 29.63-95.06 63.44-134.98 26.75-31.6 59.02-56.06 94.46-73.26Z"/>
+        <path android:fillColor="?android:attr/colorPrimary" android:fillType="evenOdd" android:pathData="M413.9 184.45c-2.9-28.89-10.33-57.19-21.83-83.98-62.45 31.47-112.73 84.27-137.92 152.88-9.45 25.72-14.75 51.98-16.25 78.13 8.34 19.79 14.35 40.32 18.1 61.21 8.68-48.51 29.63-95.06 63.44-134.98 26.75-31.6 59.02-56.06 94.46-73.26Z"/>
+    </group>
 </vector>
