--- a/res/values/bliss_strings.xml
+++ b/res/values/bliss_strings.xml
@@ -27,7 +27,7 @@
     <string name="bliss_codename">Bliss Codename</string>
 
     <!-- Hardware info -->
-    <string name="soc_model">SoC Model</string>
+    <string name="soc_model">CPU Model</string>
     <string name="total_ram">Total RAM</string>
 
     <!-- Bliss maintainer -->
