--- a/res/drawable/ic_bliss_acc.xml
+++ b/res/drawable/ic_bliss_acc.xml
@@ -1,13 +1,18 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:width="24dp" android:height="24dp" android:viewportWidth="24" android:viewportHeight="24">
-<group>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M11.97 0c0.83 0.57 5.1 3.86 0 6.96-5.1-3.1-0.84-6.4 0-6.96Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M8.44 8.36c1.4-5.76-3.97-5.1-4.97-4.92-0.18 0.98-0.85 6.3 4.97 4.92Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M7.03 11.96c-3.13-5.05-6.46-0.82-7.03 0 0.57 0.83 3.9 5.06 7.03 0Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M16.97 11.96c3.13-5.05 6.46-0.82 7.03 0-0.57 0.83-3.9 5.06-7.03 0Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M20.53 3.44c-1-0.19-6.37-0.84-4.97 4.92 5.82 1.38 5.16-3.94 4.97-4.92Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M3.63 20.54c1 0.18 6.34 0.86 4.94-4.9-5.82-1.38-5.16 3.94-4.97 4.92l0.03-0.02Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M12.08 24c0.84-0.57 5.1-3.86 0-6.96-5.1 3.1-0.83 6.4 0 6.96Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M15.68 15.64c-1.4 5.76 3.98 5.1 4.98 4.92 0.18-0.98 0.84-6.3-4.98-4.92Z"/>
-<path android:fillColor="?android:attr/colorAccent" android:pathData="M12.86 9.8l-0.88-1.18-0.89 1.18L9.62 9.6l0.22 1.45-1.2 0.88 1.2 0.87-0.22 1.46 1.47-0.22 0.89 1.18 0.88-1.18 1.47 0.22-0.21-1.46 1.19-0.87-1.2-0.88 0.22-1.45-1.47 0.21Z"/>
-</group>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="512"
+    android:viewportHeight="512">
+    <group>
+        <path android:fillColor="?android:attr/colorAccent" android:pathData="M264.58 460.8c69.55-8.4 135.02-40.98 182.37-96.9 47.35-55.93 68.35-125.48 64.62-194.82-69.55 8.4-135.01 40.97-182.37 96.9-47.34 55.93-68.35 125.48-64.62 194.82Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:pathData="M264.58 460.8c69.55-8.4 135.02-40.98 182.37-96.9 47.35-55.93 68.35-125.48 64.62-194.82-69.55 8.4-135.01 40.97-182.37 96.9-47.34 55.93-68.35 125.48-64.62 194.82Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:pathData="M247.41 460.8c3.73-69.34-17.28-138.9-64.63-194.82-47.34-55.93-112.8-88.5-182.36-96.9-3.73 69.34 17.28 138.89 64.63 194.81 47.34 55.93 112.8 88.5 182.36 96.91Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:pathData="M247.41 460.8c3.73-69.34-17.28-138.9-64.63-194.82-47.34-55.93-112.8-88.5-182.36-96.9-3.73 69.34 17.28 138.89 64.63 194.81 47.34 55.93 112.8 88.5 182.36 96.91Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:fillType="evenOdd" android:pathData="M305.55 148.13c-12.68-26.1-29.4-50.1-49.4-71.33-20.06 21.28-36.81 45.37-49.5 71.54 19.5 20.15 36.22 43.22 49.34 68.89 13.18-25.77 29.96-48.9 49.56-69.1Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:fillType="evenOdd" android:pathData="M305.55 148.13c-12.68-26.1-29.4-50.1-49.4-71.33-20.06 21.28-36.81 45.37-49.5 71.54 19.5 20.15 36.22 43.22 49.34 68.89 13.18-25.77 29.96-48.9 49.56-69.1Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:fillType="evenOdd" android:pathData="M98.09 184.45c2.9-28.89 10.32-57.19 21.82-83.98 55.81 28.12 101.9 73.28 129.05 131.52-2.45 5.54-4.73 11.19-6.85 16.94-7.26 19.77-12.18 39.85-14.9 59.98-9.5-17.94-21.03-35.1-34.65-51.2-26.77-31.6-59.03-56.07-94.47-73.26Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:fillType="evenOdd" android:pathData="M98.09 184.45c2.9-28.89 10.32-57.19 21.82-83.98 55.81 28.12 101.9 73.28 129.05 131.52-2.45 5.54-4.73 11.19-6.85 16.94-7.26 19.77-12.18 39.85-14.9 59.98-9.5-17.94-21.03-35.1-34.65-51.2-26.77-31.6-59.03-56.07-94.47-73.26Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:fillType="evenOdd" android:pathData="M413.9 184.45c-2.9-28.89-10.33-57.19-21.83-83.98-62.45 31.47-112.73 84.27-137.92 152.88-9.45 25.72-14.75 51.98-16.25 78.13 8.34 19.79 14.35 40.32 18.1 61.21 8.68-48.51 29.63-95.06 63.44-134.98 26.75-31.6 59.02-56.06 94.46-73.26Z"/>
+        <path android:fillColor="?android:attr/colorAccent" android:fillType="evenOdd" android:pathData="M413.9 184.45c-2.9-28.89-10.33-57.19-21.83-83.98-62.45 31.47-112.73 84.27-137.92 152.88-9.45 25.72-14.75 51.98-16.25 78.13 8.34 19.79 14.35 40.32 18.1 61.21 8.68-48.51 29.63-95.06 63.44-134.98 26.75-31.6 59.02-56.06 94.46-73.26Z"/>
+    </group>
 </vector>
